--- a/mode-settings/colors-settings.org
+++ b/mode-settings/colors-settings.org
@@ -10,11 +10,11 @@ Leuven is always a nice option, beautiful with Org Mode.
 #+begin_src emacs-lisp :load no
 (use-package leuven-theme
   :config
-  (load-theme 'leuven))
+  (load-theme 'leuven-dark))
 #+end_src
 *** [[https://github.com/catppuccin/emacs][Catpuccin Theme]]
 Trying this theme out for a little bit.
-#+begin_src emacs-lisp :load no
+#+begin_src emacs-lisp :load yes
 (use-package
  catppuccin-theme
  :config
@@ -31,7 +31,7 @@ I'm always changing my theme, but I tend to like light themes with yellow-ish ba
 (use-package ef-themes :config (load-theme 'ef-day t))
 #+end_src
 *** Gruvbox-dark
-#+begin_src emacs-lisp :load yes
+#+begin_src emacs-lisp :load no
 (use-package
  gruvbox-theme
  :ensure t
