--- a/mode-settings/copilot-settings.org
+++ b/mode-settings/copilot-settings.org
@@ -11,6 +11,8 @@
  :hook (prog-mode . copilot-mode)
  :hook (yaml-mode . copilot-mode)
  :hook (org-mode . copilot-mode)
+ :hook (direnv-envrc-mode . copilot-mode)
+ :hook (conf-mode . copilot-mode)
  :config
  (setq copilot-max-char -1)
  (setq copilot-indent-offset-warning-disable t)
