--- a/mode-settings/avy-settings.org
+++ b/mode-settings/avy-settings.org
@@ -1,4 +1,5 @@
 * Avy
+** Main Package
 #+PROPERTY: header-args:emacs-lisp :load yes
 #+begin_src emacs-lisp :load yes
 (use-package
@@ -16,4 +17,10 @@
 
  (setq avy-case-fold-search nil) ;; case sensitive makes selection easier
  (setq avy-indent-line-overlay t))
+#+end_src
+** Casual Avy
+#+begin_src emacs-lisp :load yes
+(use-package casual-avy
+  :ensure t
+  :bind ("M-g" . casual-avy-tmenu))
 #+end_src
