--- a/mode-settings/consult-embark-marginalia-settings.org
+++ b/mode-settings/consult-embark-marginalia-settings.org
@@ -101,7 +101,12 @@
       "Ripgrep" #'consult--ripgrep-make-builder dir initial)))
 
  ;; (setq consult-ripgrep-args "rg --null --line-buffered --color=never --max-columns=1000 --path-separator /\ --smart-case --no-heading --line-number .")
- (setq consult-project-function 'projectile-project-root)
+ ;; if project.el has been loaded, then use it to set the project root, if projectile has been loaded, then use it to set the project root. If neither has been loaded, then raise an error.
+ (if (fboundp 'projectile-project-root)
+     (setq consult-project-function 'projectile-project-root)
+   (if (fboundp 'project-current)
+       (setq consult-project-function 'project-current)
+     (error "No project found")))
 
  ;; Optionally configure the register formatting. This improves the register
  ;; preview for `consult-register', `consult-register-load',
@@ -158,14 +163,26 @@
 
  ;; Optionally configure a function which returns the project root directory.
  ;; There are multiple reasonable alternatives to chose from.
+
+ (if (fboundp 'projectile-project-root)
+     (setq consult-project-root-function #'projectile-project-root)
+   (if (fboundp 'project-current)
+       (setq consult-project-root-function
+             (lambda ()
+               (when-let (project
+                          (project-current))
+                 (car (project-roots project)))))
+     (setq consult-project-root-function
+           (lambda () (locate-dominating-file "." ".git")))))
+
  ;;;; 1. project.el (project-roots)
  ;; (setq consult-project-root-function
  ;;       (lambda ()
  ;;         (when-let (project (project-current))
  ;;           (car (project-roots project)))))
  ;;;; 2. projectile.el (projectile-project-root)
- (autoload 'projectile-project-root "projectile")
- (setq consult-project-root-function #'projectile-project-root)
+ ;; (autoload 'projectile-project-root "projectile")
+ ;; (setq consult-project-root-function #'projectile-project-root)
  ;;;; 3. vc.el (vc-root-dir)
  ;; (setq consult-project-root-function #'vc-root-dir)
  ;;;; 4. locate-dominating-file
