--- a/mode-settings/treemacs-settings.org
+++ b/mode-settings/treemacs-settings.org
@@ -1,10 +1,16 @@
 * Treemacs
-#+begin_src emacs-lisp :load yes
+** Treemacs base packages
+#+begin_src emacs-lisp :load no
 (use-package
  treemacs
  :bind (("M-P" . treemacs))
  :config (setq treemacs-persist-file "treemacs-persist"))
+#+end_src
+** Addons
+#+begin_src emacs-lisp :load no
 (use-package treemacs-projectile :after treemacs)
+#+end_src
+#+begin_src emacs-lisp :load yes
 (use-package
  treemacs-icons-dired
  :after
