--- a/mode-settings/treemacs-settings.org
+++ b/mode-settings/treemacs-settings.org
@@ -1,20 +1,19 @@
 * Treemacs
 ** Treemacs base packages
-#+begin_src emacs-lisp :load no
+#+begin_src emacs-lisp :load yes
 (use-package
  treemacs
  :bind (("M-P" . treemacs))
  :config (setq treemacs-persist-file "treemacs-persist"))
 #+end_src
 ** Addons
-#+begin_src emacs-lisp :load no
-(use-package treemacs-projectile :after treemacs)
+#+begin_src emacs-lisp :load yes
+(use-package treemacs-projectile
+ ;; :after treemacs
+)
 #+end_src
 #+begin_src emacs-lisp :load yes
 (use-package
  treemacs-icons-dired
- :after
- treemacs
- dired
  :config (treemacs-icons-dired-mode))
 #+end_src
