--- a/mode-settings/snippets-settings.org
+++ b/mode-settings/snippets-settings.org
@@ -18,13 +18,16 @@
    :repo "jsigman/yasnippet-snippets"))
 
 (yas-global-mode 1)
+#+END_SRC
+** Consult Yasnippet
+#+begin_src emacs-lisp :load yes
 (use-package
  consult-yasnippet
  :after consult
  :config (global-set-key (kbd "M-Y") 'consult-yasnippet))
 #+END_SRC
 ** Yasnippet-Capf
-#+begin_src emacs-lisp :load no
+#+begin_src emacs-lisp :load yes
 (use-package
  yasnippet-capf
  :after cape
